1. Settings are marked with MADS version 2. broker can provide binary plugins

--- a/mads.ini
+++ b/mads.ini
@@ -58,6 +58,7 @@ pub_topic = "perf_assess"
 
 [publish]
 pub_topic = "publish"
+attachment = "src/plugin/publish.plugin"
 
 [dealer]
 sub_topic = ["publish", "spawner"]
