Updated cmake template for mads-plugin to support plugin name suffix

--- a/share/templates/CMakeLists.txt
+++ b/share/templates/CMakeLists.txt
@@ -14,7 +14,13 @@ if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   set(CMAKE_INSTALL_PREFIX "{{install_dir}}" CACHE PATH "Install path prefix, prepended onto install directories." FORCE)
 endif()
 message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
-message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}") 
+message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+set(PLUGIN_SUFFIX "" CACHE STRING "Suffix for the plugin file, identifying the architecture, e.g. arm64, x86_64, etc.")
+if(PLUGIN_SUFFIX STREQUAL "")
+  message(WARNING "No PLUGIN_SUFFIX set, using default plugin name. In multi-platform environment with OTA plugins it is advised to set PLUGIN_SUFFIX to the architecture, e.g. arm64, x86_64, etc.")
+else()
+  message(STATUS "PLUGIN_SUFFIX set to: ${PLUGIN_SUFFIX}")
+endif()
 
 # PROJECT SETTINGS #############################################################
 set(CMAKE_CXX_STANDARD 17)
@@ -77,8 +83,13 @@ macro(add_plugin name)
   endif()
   target_link_libraries(${name} PRIVATE pugg ${plugin_LIBS})
   set_target_properties(${name} PROPERTIES PREFIX "")
-  set_target_properties(${name} PROPERTIES SUFFIX ".plugin")
-  target_compile_definitions(${name} PRIVATE PLUGIN_NAME="${name}")
+  if (PLUGIN_SUFFIX)
+    set_target_properties(${name} PROPERTIES SUFFIX "_${PLUGIN_SUFFIX}.plugin")
+    target_compile_definitions(${name} PRIVATE PLUGIN_NAME="${name}_${PLUGIN_SUFFIX}")
+  else()
+    set_target_properties(${name} PROPERTIES SUFFIX ".plugin")
+    target_compile_definitions(${name} PRIVATE PLUGIN_NAME="${name}")
+  endif()
   list(APPEND TARGET_LIST ${name})
 endmacro()
 
