Fixing non blocking filter loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,14 @@ set(LIB_VERSION_CHECK "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MI
 project(${LIB_NAME} VERSION ${LIB_VERSION} LANGUAGES CXX)
 set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
 
+# Read VERSION_PATCH from command line -DVERSION_PATCH=... if provided
+if(DEFINED VERSION_PATCH)
+  set(VERSION_PATCH "${VERSION_PATCH}" CACHE STRING "Patch version from command line" FORCE)
+else()
+  set(VERSION_PATCH "" CACHE STRING "Patch version from command line" FORCE)
+endif()
+message(STATUS "MADS version: ${LIB_VERSION}.${VERSION_PATCH}")
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -390,7 +398,7 @@ endif()
 #                             |___/         |___/ 
 if(${MADS_SKIP_EXTERNALS})
   set(CPACK_PACKAGE_NAME "${LIB_NAME}")
-  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LIB_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
+  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LIB_VERSION}.${VERSION_PATCH}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
   set(CPACK_PACKAGE_VENDOR "MADS Consortium")
   set(CPACK_PACKAGE_DIRECTORY ${CMAKE_SOURCE_DIR}/packages)
   set(CPACK_STRIP_FILES TRUE)
@@ -402,7 +410,7 @@ if(${MADS_SKIP_EXTERNALS})
   if(APPLE)
     set(CPACK_GENERATOR "STGZ")
     if(CMAKE_OSX_ARCHITECTURES MATCHES ";")
-      set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LIB_VERSION}-${CMAKE_SYSTEM_NAME}-universal")
+      set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LIB_VERSION}.${VERSION_PATCH}-${CMAKE_SYSTEM_NAME}-universal")
     endif()
   elseif(MSVC)
     set(CPACK_GENERATOR "ZIP;INNOSETUP")
