--- a/src/mads.hpp.in
+++ b/src/mads.hpp.in
@@ -37,6 +37,7 @@ Author(s): Paolo Bosetti
 #define LIB_NAME "@APP_NAME@"
 #define LIB_VERSION "v@LIB_VERSION@"
 #define LIB_VERSION_CHECK "v@LIB_VERSION_CHECK@"
+#define LIB_GIT_TAG "@GIT_TAG@"
 #define MADS_PREFIX "@PREFIX@"
 
 #define LOGGER_STATUS_TOPIC "logger_status"
