--- a/src/mads.hpp.in
+++ b/src/mads.hpp.in
@@ -18,12 +18,12 @@ Author(s): Paolo Bosetti
 #endif
 
 #include <chrono>
+#include <cmath>
 #include <exception>
 #include <iomanip>
 #include <map>
 #include <sstream>
 #include <string>
-#include <cmath>
 
 /*
   ____        __ _
@@ -81,11 +81,10 @@ Author(s): Paolo Bosetti
 
 // Used for common CLI options in agent executables
 #define SETUP_OPTIONS(options, Klass)                                          \
-  options.add_options()                                                        \
-    ("s,settings", "Settings file path/URI", value<string>())                  \
-    ("S,save-settings", "Save settings to ini file", value<string>())          \
-    ("v,version", "Print version")                                             \
-    ("h,help", "Print usage");                                                 \
+  options.add_options()("s,settings", "Settings file path/URI",                \
+                        value<string>())(                                      \
+      "S,save-settings", "Save settings to ini file",                          \
+      value<string>())("v,version", "Print version")("h,help", "Print usage"); \
   auto options_parsed = options.parse(argc, argv);                             \
   if (options_parsed.count("help")) {                                          \
     cout << argv[0] << " ver. " << LIB_VERSION << endl;                        \
@@ -148,7 +147,6 @@ namespace Mads {
  */
 static std::string version() { return LIB_VERSION; }
 
-
 /**
  * @brief Checks if the given version matches the library version.
  *
@@ -177,7 +175,14 @@ static bool running = true;
  * @brief Enumeration of event types for agents.
  *
  */
-enum class event_type { marker = 0, marker_in, marker_out, startup, shutdown };
+enum class event_type {
+  marker = 0,
+  marker_in,
+  marker_out,
+  startup,
+  shutdown,
+  message
+};
 
 /**
  * @brief Enumeration of message types for agents.
@@ -194,13 +199,13 @@ static const std::map<event_type, std::string> event_map = {
     {event_type::marker_in, "marker in"},
     {event_type::marker_out, "marker out"},
     {event_type::startup, "startup"},
-    {event_type::shutdown, "shutdown"}};
+    {event_type::shutdown, "shutdown"},
+    {event_type::message, "message"},
+};
 
 // This results in duplicate definition link error in the GUI
 #ifndef MADS_QAGENT_H
-std::string event_name(event_type type) {
-  return event_map.at(type);
-}
+std::string event_name(event_type type) { return event_map.at(type); }
 #endif // MADS_QAGENT_H
 
 /**
@@ -210,7 +215,8 @@ std::string event_name(event_type type) {
  * @return string
  */
 static std::string
-get_ISODate_time(const std::chrono::system_clock::time_point &time, int32_t offset = 0) {
+get_ISODate_time(const std::chrono::system_clock::time_point &time,
+                 int32_t offset = 0) {
   time_t tt = std::chrono::system_clock::to_time_t(time);
   tm *tt2 = localtime(&tt);
   std::stringstream ss;
@@ -228,7 +234,8 @@ get_ISODate_time(const std::chrono::system_clock::time_point &time, int32_t offs
   return ss.str();
 }
 
-static double timecode(const std::chrono::system_clock::time_point &now, unsigned int fps = 25) {
+static double timecode(const std::chrono::system_clock::time_point &now,
+                       unsigned int fps = 25) {
   time_t now_c = std::chrono::system_clock::to_time_t(now);
   tm *lt = localtime(&now_c);
   double fct = 1000.0 / fps;
