Implemented curve auth in broker

--- a/share/templates/mads.ini
+++ b/share/templates/mads.ini
@@ -26,6 +26,9 @@ timecode_fps = 25
 frontend_address = "tcp://*:{{port_frontend}}"
 backend_address = "tcp://*:{{port_backend}}"
 settings_address = "tcp://*:{{port_settings}}"
+# The followings are only needed if using CURVE encryption
+# auth_verbose = false
+# ip_whitelist = ["127.0.0.1"] # default is empty (allow all)
 
 
 [logger]
