--- a/mads.ini
+++ b/mads.ini
@@ -24,6 +24,8 @@ timecode_fps = 25
 frontend_address = "tcp://*:9090"
 backend_address = "tcp://*:9091"
 settings_address = "tcp://*:9092"
+auth_verbose = false
+# ip_whitelist = ["127.0.0.1"]
 
 
 [logger]
