--- a/mads.ini
+++ b/mads.ini
@@ -24,7 +24,7 @@ timecode_fps = 25
 frontend_address = "tcp://*:9090"
 backend_address = "tcp://*:9091"
 settings_address = "tcp://*:9092"
-auth_verbose = false
+# auth_verbose = true
 # ip_whitelist = ["127.0.0.1"]
 
 
