--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,6 +211,7 @@ if(MSVC)
   set(ZEROMQ_INCLUDE "${libzmq_SOURCE_DIR}/include" CACHE INTERNAL "")
   set(ZEROMQ_LIBRARY_STATIC "${libzmq_BINARY_DIR}/lib/libzmq-static.a" CACHE INTERNAL "")
 endif()
+set(ZEROMQ_INCLUDE_DIR "${libzmq_SOURCE_DIR}/include" CACHE INTERNAL "")
 set(ZMQPP_LIBZMQ_CMAKE ON FORCE BOOL "")
 set(ZMQPP_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(ZMQPP_BUILD_CLIENT OFF CACHE BOOL "" FORCE)
