cmake windows fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,7 +277,7 @@ if(WIN32)
   )
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DZMQ_STATIC")
   set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -DZMQ_STATIC")
-  add_compile_options(/MP /wd4061 /wd4996)
+  add_compile_options(/MP /wd4061 /wd4996 /wd4710 /wd4711)
   add_link_options(/NODEFAULTLIB:libcmt.lib)
 else()
   set(LIB_LIST pthread zmqpp-static libzmq-static snappy)
