--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,7 +211,7 @@ if(MSVC)
   set(ZEROMQ_INCLUDE "${libzmq_SOURCE_DIR}/include" CACHE INTERNAL "")
   set(ZEROMQ_LIBRARY_STATIC "${libzmq_BINARY_DIR}/lib/libzmq-static.a" CACHE INTERNAL "")
 endif()
-set(ZEROMQ_INCLUDE_DIR "${libzmq_SOURCE_DIR}/include" CACHE INTERNAL "")
+set(ZEROMQ_INCLUDE_DIR "${libzmq_SOURCE_DIR}/include" FORCE INTERNAL "")
 set(ZMQPP_LIBZMQ_CMAKE ON FORCE BOOL "")
 set(ZMQPP_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(ZMQPP_BUILD_CLIENT OFF CACHE BOOL "" FORCE)
@@ -285,8 +285,12 @@ else()
 endif()
 
 if(APPLE)
+  # homebrew on silicon
   include_directories("/opt/homebrew/include")
   link_directories("/opt/homebrew/lib/")
+  # homebrew on Intel
+  include_directories("/usr/local/include")
+  link_directories("/usr/local/lib/")
   find_library(SECURITY_LIBRARY Security)
   find_library(COREFOUNDATION_LIBRARY CoreFoundation)
   set(MONGO_LIBS mongocxx-static bsoncxx-static mongoc-static-1.0 bson-static-1.0 resolv sasl2 ${SECURITY_LIBRARY} ${COREFOUNDATION_LIBRARY} zstd)
@@ -323,9 +327,11 @@ file(GLOB LIB_SOURCES ${SOURCE_DIR}/*.cpp)
 add_library(${LIB_NAME} STATIC ${LIB_SOURCES})
 target_link_libraries(${LIB_NAME} ${LIB_LIST})
 list(APPEND TARGET_LIST ${LIB_NAME})
-add_library(${PROJECT_NAME}-lib SHARED ${LIB_SOURCES})
-target_link_libraries(${PROJECT_NAME}-lib ${LIB_LIST})
-list(APPEND TARGET_LIST ${PROJECT_NAME}-lib)
+if(APPLE)
+  add_library(${PROJECT_NAME}-lib SHARED ${LIB_SOURCES})
+  target_link_libraries(${PROJECT_NAME}-lib ${LIB_LIST})
+  list(APPEND TARGET_LIST ${PROJECT_NAME}-lib)
+endif()
 
 # Main command
 add_executable(mads ${MAIN_DIR}/mads.cpp)
