--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.20...4.20)
 set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
 # cmake_minimum_required(VERSION 3.5...3.27)
 
