--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -441,7 +441,7 @@ install(TARGETS ${TARGET_LIST}
   INCLUDES DESTINATION include
   COMPONENT MADS
 )
-file(GLOB LIB_HEADERS ${SOURCE_DIR}/*.hpp)
+file(GLOB LIB_HEADERS ${SOURCE_DIR}/*.hpp ${SOURCE_DIR}/*.h)
 install(FILES 
   ${LIB_HEADERS}
   TYPE INCLUDE
